problem with sign in/signup

--- a/Presentation.WebApp/appsettings.json
+++ b/Presentation.WebApp/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocalDatabase": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\EC\\AspNetCore_MVC_2\\Infrastructure\\Data\\local_database.mdf;Integrated Security=True;Connect Timeout=30"
+    "LocalDatabase": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\EC\\AspNetCore_MVC_2\\Infrastructure\\Data\\local_database.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=True"
   }
 }
 
