--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\EC\\AspNetCore_MVC_2\\Infrastructure\\Data\\local_database.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=True"
+    "LocalDatabase": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\EC\\AspNetCore_MVC_2\\Infrastructure\\Data\\local_database.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=True"
   }
  }
